--- a/Project_5_AB_test_hypothesis/Project7_2022.12.04_ver6_final.html
+++ b/Project_5_AB_test_hypothesis/Project7_2022.12.04_ver6_final.html
@@ -14021,10 +14021,7 @@ visitors — the number of users on the specified date in the specified A/B test
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
 <span class="kn">import</span> <span class="nn">matplotlib.pyplot</span> <span class="k">as</span> <span class="nn">plt</span>
-<span class="kn">import</span> <span class="nn">seaborn</span> <span class="k">as</span> <span class="nn">sns</span>
-<span class="kn">import</span> <span class="nn">matplotlib.ticker</span> <span class="k">as</span> <span class="nn">ticker</span>
 <span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
-<span class="kn">from</span> <span class="nn">datetime</span> <span class="kn">import</span> <span class="n">datetime</span><span class="p">,</span> <span class="n">timedelta</span>
 <span class="kn">import</span> <span class="nn">scipy.stats</span> <span class="k">as</span> <span class="nn">stats</span>
 </pre></div>
 
@@ -14159,30 +14156,6 @@ visitors — the number of users on the specified date in the specified A/B test
   </thead>
   <tbody>
     <tr>
-      <th>4</th>
-      <td>Изменить цвет фона главной страницы, чтобы уве...</td>
-      <td>3</td>
-      <td>1</td>
-      <td>1</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>5</th>
-      <td>Добавить страницу отзывов клиентов о магазине,...</td>
-      <td>3</td>
-      <td>2</td>
-      <td>2</td>
-      <td>3</td>
-    </tr>
-    <tr>
-      <th>6</th>
-      <td>Показать на главной странице баннеры с актуаль...</td>
-      <td>5</td>
-      <td>3</td>
-      <td>8</td>
-      <td>3</td>
-    </tr>
-    <tr>
       <th>1</th>
       <td>Запустить собственную службу доставки, что сок...</td>
       <td>2</td>
@@ -14191,12 +14164,36 @@ visitors — the number of users on the specified date in the specified A/B test
       <td>10</td>
     </tr>
     <tr>
+      <th>4</th>
+      <td>Изменить цвет фона главной страницы, чтобы уве...</td>
+      <td>3</td>
+      <td>1</td>
+      <td>1</td>
+      <td>1</td>
+    </tr>
+    <tr>
       <th>8</th>
       <td>Запустить акцию, дающую скидку на товар в день...</td>
       <td>1</td>
       <td>9</td>
       <td>9</td>
       <td>5</td>
+    </tr>
+    <tr>
+      <th>2</th>
+      <td>Добавить блоки рекомендаций товаров на сайт ин...</td>
+      <td>8</td>
+      <td>3</td>
+      <td>7</td>
+      <td>3</td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td>Изменить структура категорий, что увеличит кон...</td>
+      <td>8</td>
+      <td>3</td>
+      <td>3</td>
+      <td>8</td>
     </tr>
   </tbody>
 </table>
@@ -14328,12 +14325,12 @@ Let's bring the columns to the lower case.</p>
   </thead>
   <tbody>
     <tr>
-      <th>3</th>
-      <td>Изменить структура категорий, что увеличит кон...</td>
-      <td>8</td>
-      <td>3</td>
-      <td>3</td>
-      <td>8</td>
+      <th>8</th>
+      <td>Запустить акцию, дающую скидку на товар в день...</td>
+      <td>1</td>
+      <td>9</td>
+      <td>9</td>
+      <td>5</td>
     </tr>
   </tbody>
 </table>
@@ -14733,43 +14730,43 @@ The introduction of the Reach criterion, meaning influence, coverage, increases 
   </thead>
   <tbody>
     <tr>
-      <th>104</th>
-      <td>627804981</td>
-      <td>611059232</td>
-      <td>2019-08-01</td>
-      <td>17600</td>
+      <th>1099</th>
+      <td>316924019</td>
+      <td>148427295</td>
+      <td>2019-08-12</td>
+      <td>65710</td>
       <td>A</td>
     </tr>
     <tr>
-      <th>956</th>
-      <td>3122496224</td>
-      <td>3255082731</td>
-      <td>2019-08-31</td>
-      <td>1188</td>
+      <th>1172</th>
+      <td>3898641900</td>
+      <td>3803269165</td>
+      <td>2019-08-14</td>
+      <td>790</td>
       <td>B</td>
     </tr>
     <tr>
-      <th>273</th>
-      <td>1769257333</td>
-      <td>2278620397</td>
-      <td>2019-08-23</td>
-      <td>33970</td>
+      <th>312</th>
+      <td>3524589317</td>
+      <td>2986402114</td>
+      <td>2019-08-24</td>
+      <td>990</td>
       <td>B</td>
     </tr>
     <tr>
-      <th>712</th>
-      <td>3805806808</td>
-      <td>3866069709</td>
-      <td>2019-08-20</td>
-      <td>2390</td>
-      <td>B</td>
+      <th>316</th>
+      <td>4226817726</td>
+      <td>1349865791</td>
+      <td>2019-08-19</td>
+      <td>2490</td>
+      <td>A</td>
     </tr>
     <tr>
-      <th>283</th>
-      <td>3641100475</td>
-      <td>1579036099</td>
-      <td>2019-08-18</td>
-      <td>1100</td>
+      <th>873</th>
+      <td>2519737434</td>
+      <td>4256040402</td>
+      <td>2019-08-08</td>
+      <td>58220</td>
       <td>B</td>
     </tr>
   </tbody>
@@ -15124,34 +15121,34 @@ Name: date, dtype: object</pre>
   </thead>
   <tbody>
     <tr>
-      <th>4</th>
-      <td>2019-08-05</td>
-      <td>A</td>
-      <td>756</td>
-    </tr>
-    <tr>
-      <th>31</th>
-      <td>2019-08-01</td>
-      <td>B</td>
-      <td>713</td>
-    </tr>
-    <tr>
-      <th>20</th>
-      <td>2019-08-21</td>
-      <td>A</td>
-      <td>646</td>
-    </tr>
-    <tr>
-      <th>8</th>
-      <td>2019-08-09</td>
-      <td>A</td>
-      <td>617</td>
-    </tr>
-    <tr>
       <th>25</th>
       <td>2019-08-26</td>
       <td>A</td>
       <td>722</td>
+    </tr>
+    <tr>
+      <th>38</th>
+      <td>2019-08-08</td>
+      <td>B</td>
+      <td>654</td>
+    </tr>
+    <tr>
+      <th>5</th>
+      <td>2019-08-06</td>
+      <td>A</td>
+      <td>667</td>
+    </tr>
+    <tr>
+      <th>26</th>
+      <td>2019-08-27</td>
+      <td>A</td>
+      <td>711</td>
+    </tr>
+    <tr>
+      <th>56</th>
+      <td>2019-08-26</td>
+      <td>B</td>
+      <td>676</td>
     </tr>
   </tbody>
 </table>
@@ -17602,7 +17599,7 @@ There is no statistically significant difference in the average check between th
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[41]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[40]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">plt</span><span class="o">.</span><span class="n">figure</span><span class="p">(</span><span class="n">figsize</span><span class="o">=</span><span class="p">(</span><span class="mi">14</span><span class="p">,</span> <span class="mi">6</span><span class="p">))</span>
@@ -17654,7 +17651,7 @@ There is no statistically significant difference in the average check between th
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[42]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[41]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">plt</span><span class="o">.</span><span class="n">figure</span><span class="p">(</span><span class="n">figsize</span><span class="o">=</span><span class="p">(</span><span class="mi">14</span><span class="p">,</span> <span class="mi">6</span><span class="p">))</span>
@@ -17706,7 +17703,7 @@ There is no statistically significant difference in the average check between th
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[43]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[42]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">plt</span><span class="o">.</span><span class="n">figure</span><span class="p">(</span><span class="n">figsize</span><span class="o">=</span><span class="p">(</span><span class="mi">14</span><span class="p">,</span> <span class="mi">6</span><span class="p">))</span>
